fix alignment

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -421,32 +421,9 @@ body {
 /* Video Samples Section */
 
 div#video_player_box{ width:550px; background:#000; margin:0px auto;}
-div#video_controls_bar{ background: #333; padding:10px; color:#CCC; font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;}
-button#playpausebtn{
-    background:url(../img/play.jpg);
-    border:none;
-    width:16px;
-    height:18px;
-    cursor:pointer;
-    opacity:0.5;
-}
-button#playpausebtn:hover{ opacity:1; }
+div#video_controls_bar{ background: #333; padding:10px; color:#CCC;}
 input#seekslider{ width:180px; }
 input#volumeslider{ width: 80px;}
-input[type='range'] {
-    -webkit-appearance: none !important;
-    background: #000;
-    border:#666 1px solid;
-    height:4px;
-}
-input[type='range']::-webkit-slider-thumb {
-    -webkit-appearance: none !important;
-    background: #FFF;
-    height:15px;
-    width:15px;
-    border-radius:100%;
-    cursor:pointer;
-}
 
 
 /*for search box*/
@@ -520,4 +497,10 @@ input[type='range']::-webkit-slider-thumb {
 .container-4:hover button.icon:hover{
   background: white;
 }
+
+#logo {
+
+    text-transform: lowercase;
+}
+
 
